samples/_failures_safe/1761620817_d52092_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ed34765.c: In function ‘main’:
./samples/SAFE/__tmp_9ed34765.c:145:17: error: expected ‘;’ at end of input
  145 |     matrix_print
      |                 ^
      |                 ;
./samples/SAFE/__tmp_9ed34765.c:145:5: error: expected declaration or statement at end of input
  145 |     matrix_print
      |     ^~~~~~~~~~~~
